<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    android:visibility="visible"
    tools:context="com.example.windows10gamer.connsql.Main">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            android:soundEffectsEnabled="true"
            android:src="@drawable/bglogin" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/aapet"
        android:orientation="vertical"
        android:padding="20dp"
        android:theme="@style/MyMaterialTheme"
        android:visibility="visible"
        tools:context="com.example.windows10gamer.connsql.Main">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/jaja"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="109dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/logodtt" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="70dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/RED"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/white_greyish"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@android:color/darker_gray"
                android:textSize="14sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/edPass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="8dp"
                android:weightSum="2">

                <CheckBox
                    android:id="@+id/cbRemember"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/show_pwd"
                    android:textColorHint="@color/RED"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/cbShowpass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/showpass"
                    android:textColorHint="@color/RED"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/round_button"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="Hỗ trợ kỹ thuật - 01675322273"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic" />

        </LinearLayout>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>

